@@ -1,14 +1,16 @@
-Name:       @PACKAGE_NAME@
-Summary:    A Device Firmware Update based USB programmer for Atmel chips.
-Version:    @VERSION@
-Release:    fc5
-Group:      Development/Tools
-License:    GPL
-URL:        http://dfu-programmer.sourceforge.net/
-Packager:   Weston Schmidt <weston_schmidt@alumni.purdue.edu>
-Source:     %{name}-%{version}.tar.gz
-BuildRoot:  %{_tmppath}/%{name}-%{version}-%{release}-root
-Requires:   libusb >= 0.1.10a
+Name:           dfu-programmer
+Version:        @VERSION@
+Release:        1%{?dist}
+Summary:        A Device Firmware Update based USB programmer for Atmel chips
+
+Group:          Development/Tools
+License:        GPL
+URL:            http://dfu-programmer.sourceforge.net/
+Source0:        %{name}-%{version}.tar.gz
+BuildRoot:      %{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
+
+BuildRequires:  libusb-devel >= 0.1.10a
+Requires:       libusb >= 0.1.10a
 
 %description 
 A linux based command-line programmer for Atmel chips with a USB
@@ -27,25 +29,24 @@ Currently supported chips:
 
 %build
 %configure
-make
+make %{?_smp_mflags}
 
 %install
-rm -rf ${buildroot}
-
-%makeinstall
+rm -rf $RPM_BUILD_ROOT
+make install DESTDIR=$RPM_BUILD_ROOT
 
 %clean
-rm -rf ${buildroot}
+rm -rf $RPM_BUILD_ROOT
 
 %files
 %defattr(-,root,root,-)
-%doc %attr(0644, root, root) AUTHORS ChangeLog NEWS README COPYING
+%doc AUTHORS ChangeLog NEWS README COPYING
 %{_bindir}/dfu-programmer
 %{_mandir}/man1/%{name}.1*
 
 %changelog
 
-* Wed May 07 2006 Weston Schmidt <weston_schmidt@alumni.purdue.edu>
+* Wed May 07 2006 Weston Schmidt <weston_schmidt at alumni.purdue.edu> - 0.3.0-1
 - updated the release to Fedora Core 5 & the email address
-* Wed Aug 31 2005 Weston Schmidt <weston_schmidt@yahoo.com>
+* Wed Aug 31 2005 Weston Schmidt <weston_schmidt at yahoo.com>
 - initial creation
